@@ -1,8 +1,9 @@
- $Id: ChangeLog,v 1.10 2003/09/18 14:54:49 mkern Exp $
+ $Id: ChangeLog,v 1.11 2003/09/18 19:50:02 mkern Exp $
 
 2003-09-18  Markus Kern <mkern@users.berlios.de>
 
 	* Added downloading from firewalled hosts
+	* Rewrote search reply parsing and added user name decompression
 
 2003-09-17  Markus Kern <mkern@users.berlios.de>
 
